--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,16 @@ authors = [
     { name = "Tobias Kölling", email = "tobias.koelling@mpimet.mpg.de" },
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "aiohttp>=3.11.0",
+    "polytope-client>=0.7.4",
+]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.uv]
+dev-dependencies = [
+    "ipython>=8.29.0",
+]
