--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Builds datasets, jumps through FDBs."
 readme = "README.md"
 authors = [
     { name = "Tobias Kölling", email = "tobias.koelling@mpimet.mpg.de" },
+    { name = "Lukas Kluft", email = "lukas.kluft@mpimet.mpg.de" },
 ]
 requires-python = ">=3.12"
 dependencies = [
