--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
+    "aiohttp>=3.11.1",
     "eccodes>=2.38.3",
     "polytope-client>=0.7.4",
 ]
