--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "aiohttp>=3.11.1",
     "eccodes>=2.38.3",
     "polytope-client>=0.7.4",
+    "sanic>=24.6.0",
 ]
 
 [build-system]
