--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ requires-python = ">=3.11"
 dependencies = [
     "aiohttp>=3.11.1",
     "eccodes>=2.38.3",
+    "fsspec>=2025.2.0",
+    "jinja2>=3.1.5",
     "polytope-client>=0.7.4",
     "sanic>=24.6.0",
 ]
