--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,13 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "aiohttp>=3.11.1",
-    "eccodes>=2.38.3",
+    "eccodes>=2.38.3,<2.42.0",
+    #"eccodeslib<2.44",
     "fsspec>=2025.2.0",
     "jinja2>=3.1.5",
     "polytope-client>=0.7.4",
     "sanic>=24.6.0",
+    "zarr>=2.18.3,<3",
 ]
 
 [build-system]
@@ -27,5 +29,4 @@ dev-dependencies = [
     "ipython>=8.29.0",
     "matplotlib>=3.9.2",
     "xarray>=2024.10.0",
-    "zarr>=2.18.3",
 ]
