--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "aiohttp>=3.11.1",
-    "eccodes>=2.38.3,<2.42.0",
+    "eccodes==2.41",
     #"eccodeslib<2.44",
     "fsspec>=2025.2.0",
     "jinja2>=3.1.5",
